# custom-lang

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: soundsystem.h  vowel.h
langs/preset00/: phonemes.csv
langs/preset00/units/: consonants.csv  suprasegmentals.csv  vowels.csv
langs/preset01/: phonemes.csv
langs/preset01/phonology/: phonotactics.json
langs/preset01/units/: consonants.csv  suprasegmentals.csv  vowels.csv
langs/preset02/phonology/: phonotactics.json
langs/preset02/units/: consonants.csv  vowels.csv
ling/units/: consonant.cpp  consonant.h  phoneme.cpp  phoneme.h  soundsystem.cpp  soundsystem.h  vowel.cpp  vowel.h
ling/word/: morpheme.h  syllable.h  word.h
tests/: assim_algos.cpp  gen_morph.cpp  phon_rules.cpp  print_all.cpp  sequence_tool.cpp  syl_gen.cpp
